cmake_minimum_required(VERSION 3.25)
project(AMPSIndex)
include_directories(${PROJECT_SOURCE_DIR}/include /opt/AMPS/latest-cpp-client/include)
set(CMAKE_CXX_STANDARD 20)
file(GLOB src "src/*.cpp")
add_library(util STATIC ${src})
file(GLOB files "main/*.cpp")
link_directories(/opt/AMPS/latest-cpp-client/lib/x86_64/release)
link_libraries(util amps)
foreach (file ${files})
    get_filename_component(x ${file} NAME_WLE)
    message(${x})
    add_executable(${x} ${file})
endforeach ()

